Stop Block-media fixed children resizing by using 100vh (which doesn't change on Safari/Chrome when browser chrome height changes).

--- a/src/app/components/Block/index.scss
+++ b/src/app/components/Block/index.scss
@@ -44,7 +44,7 @@
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 100vh; // https://github.com/bokand/URLBarSizing
 
       // Safari (7.1+)
       _::-webkit-full-page-media,
